--- a/CameraAadLocation/app/src/main/res/values/strings.xml
+++ b/CameraAadLocation/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_camera">CameraActivity</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_sign_maps">Map</string>
 </resources>
